# Enterprise-Data-Engineering-Portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  SENIOR_LEVEL_ACHIEVEMENTS.md  START_HERE.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_SUMMARY.md  environment.yml  pyproject.toml
.github/workflows/: mlops-deployment-ci.yml  smart-data-ingestion-ci.yml
P1/: GOALS_NOTES.txt  LICENSE  README.md  dvc.yaml  example_urls.txt  requirements.txt
P1/.github/workflows/: smoke.yml
P1/configs/: data_schema.yaml
P1/docker/: Dockerfile.validator
P1/docs/: dataset_card.md
P1/scripts/: eval.py  lora_ablation.py  setup_demo.py
P2/: GOALS_NOTES.txt  PROJECT_SUMMARY.md  README.md  dataset_card.md  requirements.txt  setup.py
P2/.github/workflows/: dataops.yml
P2/notebooks/: EDA.ipynb
P2/scripts/: annotate.py  clean.py  ingest.py  metrics.py
P2/tests/: test_schema.py
P3/: Dockerfile  GOALS_NOTES.txt  README.md  docker-compose.yml  requirements.txt  train.py
P3/.github/workflows/: ci_smoke.yml
P3/docs/: SLO_RUNBOOK.md
P3/k8s/: deployment.yaml
P3/scripts/: deploy_canary.sh  generate_baseline.py  onnx_benchmark.py  setup_monitoring.py  validate_project.py
P3/tests/: test_app.py
P4/: GOALS_NOTES.txt  README.md  dvc.yaml
P4/blog/: technical_post.md
P4/configs/: sources.yaml
P4/scripts/: pii_sanitizer.py
P4/src/api/: main.py
dataops-validation-pipeline/: .gitignore  README.md  docker-compose.yml
dataops-validation-pipeline/configs/great_expectations/: great_expectations.yaml
dataops-validation-pipeline/docker/: Dockerfile.processor
dataops-validation-pipeline/docs/: model_card.md  usage.md
dataops-validation-pipeline/notebooks/: demo_notebook.ipynb
dataops-validation-pipeline/scripts/: index.py  ingest.py  train_lora.py
dataops-validation-pipeline/space/: app.py
docs/: ARCHITECTURE.md  COSTS.md  LEGAL.md  SECURITY.md
enterprise-qa-service/: Dockerfile  README.md  docker-compose.yml  requirements.txt
enterprise-qa-service/.github/workflows/: ci_smoke.yml
enterprise-qa-service/scripts/: ablation.py  eval.py
enterprise-qa-service/src/ingestion/: scraper.py
enterprise-qa-service/src/processing/: validate_and_process.py
enterprise-qa-service/src/search/: index_knowledge_base.py
enterprise-qa-service/tests/: test_processing.py
mlops-deployment-system/: .bandit  .env.example  .gitignore  Dockerfile  LICENSE  README.md  drift_detector.py  flow_retrain.py  mypy.ini  requirements.txt  rollback.sh  ruff.toml  train.py
mlops-deployment-system/k8s/: README.md  configmap.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  secrets.template.yaml  servicemonitor.yaml
mlops-deployment-system/monitoring/: prometheus.yml
mlops-deployment-system/results/: benchmarks.md
mlops-deployment-system/scripts/: generate_baseline.py  ingest.py  onnx_benchmark.py  setup_monitoring.py  validate_project.py
mlops-deployment-system/space/: app.py
mlops-deployment-system/terraform/: README.md
mlops-deployment-system/terraform/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mlops-deployment-system/terraform/gcp/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
mlops-deployment-system/tests/: test_app.py  test_data_schema.py  test_drift_detector.py  test_train.py
smart-data-ingestion/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  dvc.yaml  pytest.ini  requirements.txt  ruff.toml
smart-data-ingestion/data/processed/: faqs.jsonl
smart-data-ingestion/scripts/: annotate.py  clean.py  data_quality.py  ingest.py  metrics.py  train_baseline.py  validate_schema.py
smart-data-ingestion/tests/: test_ingest.py  test_schema.py
